# advent2023

./: .gitignore  CMakeLists.txt  Makefile
days/: day_1.c  day_2.c  day_3.c
libs/: array.c  array.d  array.h  graph.h  slice.c  slice.h
nope/: day_2.py
